[package]
name = "demo-pwm-colors"
version = "0.1.0"
edition = "2021"

[dependencies]
rp2040-hal = "0.6.0"
rp-pico = "0.5.0"
embedded-hal = "0.2.7"
panic-halt = "0.2.0"
cortex-m = "0.7"
cortex-m-rt = "0.7"
ssd1306 = "0.7.1"
embedded-graphics = "0.7.1"
embedded-graphics-core = "0.3.3"
fugit = "0.3.6"

[dependencies.arrayvec]
version = "0.7.2"
default-features = false